--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <body>
     <h1>Welcome to AI French Poem Generator</h1>
 
+    <footer>
+      This project was coded by
+      <a href="https://github.com/MercyDej" target="_blank"> Mercy Mih </a>, is
+      <a
+        href="https://github.com/MercyDej/french-poem-generator"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a
+        href="https://shecodes-vanilla-weather-search-homework.vercel.app/"
+        target="_blank"
+        >hosted on Vercel</a
+      >
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
