--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to AI French Poem Generator</h1>
 
     <footer>
-      This project was coded by
+      This AI project was coded by
       <a href="https://github.com/MercyDej" target="_blank"> Mercy Mih </a>, is
       <a
         href="https://github.com/MercyDej/french-poem-generator"
@@ -19,9 +19,7 @@
         >open-sourced on GitHub</a
       >
       and
-      <a
-        href="https://shecodes-vanilla-weather-search-homework.vercel.app/"
-        target="_blank"
+      <a href="https://french-poem-generator.vercel.app/" target="_blank"
         >hosted on Vercel</a
       >
     </footer>
