--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to AI French Poem Generator</h1>
-
+    <header>
+      <h1>AI French Poem Generator</h1>
+    </header>
+    <main>
+      <form action="">
+        <input
+          type="text"
+          placeholder="Enter the topic of the french poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        Demain, dès l’aube, à l’heure où blanchit la campagne,
+        <br />
+        Je partirai. Vois-tu, je sais que tu m’attends.
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/MercyDej" target="_blank"> Mercy Mih </a>, is
