--- a/index.html
+++ b/index.html
@@ -8,40 +8,44 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI French Poem Generator</h1>
-    </header>
-    <main>
-      <form action="">
-        <input
-          type="text"
-          placeholder="Enter the topic of the french poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        Demain, dès l’aube, à l’heure où blanchit la campagne,
-        <br />
-        Je partirai. Vois-tu, je sais que tu m’attends.
-      </div>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/MercyDej" target="_blank"> Mercy Mih </a>, is
-      <a
-        href="https://github.com/MercyDej/french-poem-generator"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and
-      <a href="https://french-poem-generator.vercel.app/" target="_blank"
-        >hosted on Vercel</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h1>AI French Poem Generator</h1>
+      </header>
+      <main>
+        <form action="">
+          <input
+            type="text"
+            placeholder="Enter the topic of the french poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          Demain, dès l’aube, à l’heure où blanchit la campagne,
+          <br />
+          Je partirai. Vois-tu, je sais que tu m’attends.
+        </div>
+      </main>
 
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/MercyDej" target="_blank"> Mercy Mih </a>,
+        is
+        <a
+          href="https://github.com/MercyDej/french-poem-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://french-poem-generator.vercel.app/" target="_blank"
+          >hosted on Vercel</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
