--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
   </head>
@@ -13,7 +14,7 @@
         <h1>AI French Poem Generator</h1>
       </header>
       <main>
-        <form action="">
+        <form id="poem-generator-form">
           <input
             type="text"
             placeholder="Enter the topic of the french poem"
@@ -24,11 +25,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
-          Demain, dès l’aube, à l’heure où blanchit la campagne,
-          <br />
-          Je partirai. Vois-tu, je sais que tu m’attends.
-        </div>
+        <div class="poem" id="poem"></div>
       </main>
 
       <footer>
